--- a/app/src/main/res/layout/activity_analytics.xml
+++ b/app/src/main/res/layout/activity_analytics.xml
@@ -176,13 +176,13 @@
                                 android:id="@+id/electricityCardAmountAnalytics"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Rs. 3,200"
-                                android:textAlignment="center"
+                                android:layout_marginTop="4dp"
                                 android:maxLength="12"
-                                android:textSize="20sp"
-                                android:textStyle="bold"
+                                android:text="0.00\nLKR"
+                                android:textAlignment="center"
                                 android:textColor="@color/grey_100"
-                                android:layout_marginTop="4dp"/>
+                                android:textSize="20sp"
+                                android:textStyle="bold" />
 
 
                         </LinearLayout>
@@ -219,7 +219,7 @@
                                 android:id="@+id/waterCardAmountAnalytics"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Rs. 3,200"
+                                android:text="0.00\nLKR"
                                 android:textAlignment="center"
                                 android:maxLength="12"
                                 android:textSize="20sp"
@@ -271,7 +271,7 @@
                                 android:id="@+id/internetCardAmountAnalytics"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Rs. 3,200"
+                                android:text="0.00\nLKR"
                                 android:textAlignment="center"
                                 android:maxLength="12"
                                 android:textSize="20sp"
@@ -314,7 +314,7 @@
                                 android:id="@+id/fuelCardAmountAnalytics"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Rs. 3,200"
+                                android:text="0.00\nLKR"
                                 android:textAlignment="center"
                                 android:maxLength="12"
                                 android:textSize="20sp"
