--- a/app/src/main/res/layout/activity_analytics.xml
+++ b/app/src/main/res/layout/activity_analytics.xml
@@ -107,6 +107,8 @@
             android:scrollbars="none">
 
 
+
+
             <RelativeLayout
                 android:id="@+id/homeContainer"
                 android:layout_width="match_parent"
@@ -114,14 +116,82 @@
                 android:paddingHorizontal="32dp"
                 android:paddingTop="16dp">
 
+                <RadioGroup
+                    android:id="@+id/monthSelection"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="fill_horizontal"
+                    android:orientation="horizontal"
+                    android:showDividers="middle"
+                    android:divider="@color/transparent"
+                    android:dividerPadding="24dp"
+                    android:checkedButton="@id/threeMonths"
+                    android:layout_alignParentTop="true">
+
+                    <RadioButton
+
+                        android:id="@+id/threeMonths"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/date_range_selector"
+                        android:button="@color/blue"
+                        android:fontFamily="@font/inter_semibold"
+                        android:paddingHorizontal="24dp"
+                        android:paddingVertical="16dp"
+                        android:text="3 Months"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"/>
+
+                    <RadioButton
+
+                        android:id="@+id/sixMonths"
+                        android:text="6 Months"
+                        android:textSize="16dp"
+                        android:fontFamily="@font/inter_semibold"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/date_range_selector"
+                        android:button="@color/blue"
+                        android:paddingVertical="16dp"
+                        android:paddingHorizontal="24dp"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"/>
+
+                    <RadioButton
+
+                        android:id="@+id/oneYear"
+                        android:text="1 Year"
+                        android:textSize="16dp"
+                        android:fontFamily="@font/inter_semibold"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/date_range_selector"
+                        android:button="@color/blue"
+                        android:paddingVertical="16dp"
+                        android:paddingHorizontal="24dp"/>
+
+
+
+                </RadioGroup>
 
                 <!--Half pie Chart-->
                 <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/homePieChart"
                     android:layout_width="match_parent"
                     android:layout_height="260sp"
-                    android:layout_alignParentTop="true"
+                    android:layout_below="@+id/monthSelection"
                     android:layout_marginBottom="16dp"
+                    android:layout_marginTop="24dp"
                     android:background="@drawable/outline_grey_10" />
 
                 <!--category cards-->
