--- a/app/src/main/res/layout/activity_saved_bills.xml
+++ b/app/src/main/res/layout/activity_saved_bills.xml
@@ -30,7 +30,7 @@
                 app:cardElevation="0dp">
 
                 <ImageButton
-                    android:id="@+id/imgProfile"
+                    android:id="@+id/imgProfileSavedBills"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="0dp"
