--- a/app/src/main/res/layout/activity_analytics.xml
+++ b/app/src/main/res/layout/activity_analytics.xml
@@ -102,6 +102,7 @@
         <ScrollView
             android:id="@+id/homeScrollView"
             android:layout_below="@id/topBar"
+            android:layout_marginBottom="80dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="none">
