--- a/app/src/main/res/layout/activity_saved_bills.xml
+++ b/app/src/main/res/layout/activity_saved_bills.xml
@@ -105,7 +105,8 @@
             android:layout_below="@id/topBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="none">
+            android:scrollbars="none"
+            android:layout_marginBottom="80dp">
 
 
             <RelativeLayout
@@ -114,6 +115,7 @@
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="32dp"
                 android:paddingTop="16dp"
+
 
                 >
 
