--- a/app/src/main/res/layout/activity_verify_email.xml
+++ b/app/src/main/res/layout/activity_verify_email.xml
@@ -47,7 +47,6 @@
         />
 
 
-
     <Button
         android:id="@+id/btnVerifiedSubmit"
         android:layout_width="match_parent"
@@ -56,11 +55,10 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:padding="8dp"
-        android:text="Submit"
+        android:text="Ok"
         android:textAllCaps="false"
         android:textSize="16sp"
-        app:cornerRadius="15dp"
-        />
+        app:cornerRadius="15dp" />
 
 
 
