analise buttons are ok

--- a/app/src/main/res/layout/activity_analytics.xml
+++ b/app/src/main/res/layout/activity_analytics.xml
@@ -136,7 +136,7 @@
                         android:paddingHorizontal="16dp"
                         android:paddingVertical="16dp"
                         android:layout_weight="1"
-                        android:textColor="@color/grey_100"
+                        android:textColor="@drawable/btn_textcolor"
                         android:backgroundTint="@color/yellow_60"
                         android:text="3M"
                         android:textSize="16dp"
@@ -152,8 +152,8 @@
                         android:paddingHorizontal="16dp"
                         android:paddingVertical="16dp"
                         android:layout_weight="1"
-                        android:textColor="@color/grey_100"
-                        android:backgroundTint="@color/white"
+                        android:textColor="@drawable/btn_textcolor"
+                        android:backgroundTint="@color/yellow_60"
                         android:text="6M"
                         android:textSize="16dp"
                         android:textStyle="bold"
@@ -169,8 +169,8 @@
                         android:paddingHorizontal="16dp"
                         android:paddingVertical="16dp"
                         android:layout_weight="1"
-                        android:textColor="@color/grey_100"
-                        android:backgroundTint="@color/white"
+                        android:textColor="@drawable/btn_textcolor"
+                        android:backgroundTint="@color/yellow_60"
                         android:text="1Y"
                         android:textSize="16dp"
                         android:textStyle="bold" />
